# donation-counter

./: Makefile  README.md  app.py  pyproject.toml
static/css/: bulma.min.css  main.css  style.css
templates/: base.html  home.html  index.html
