[tool.poetry]
name = "refresh-number-page"
version = "0.1.0"
description = ""
authors = ["Maxime Bloch <me@mcbloch.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
apscheduler = "^3.6"
requests = "^2.22"
logger = "^1.4"
limiter = "^0.1.1"
flask-limiter = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
